# duratiq

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DURATIQ_MVP_PLAN.md  README.md  RELEASING.md  alembic.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: admin.yml  build.yml  coverage.yml  pre-commit.yml  publish.yml  release.yml  test.yml
admin/: .gitignore  README.md  docker-compose.yml
admin/backend/: .env.example  Dockerfile  README.md  pyproject.toml
admin/backend/app/: __init__.py  actions.py  broker.py  db.py  deps.py  main.py  repository.py  schemas.py
admin/backend/app/api/: routes_runs.py
admin/backend/app/core/: config.py
admin/backend/scripts/: seed_demo.py
admin/backend/tests/: test_runs_api.py
admin/frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
admin/frontend/src/: App.tsx  index.css  main.tsx
admin/frontend/src/api/: client.ts
admin/frontend/src/auth/: TokenGate.tsx  token.ts
admin/frontend/src/components/: JsonBlock.tsx  StatusBadge.tsx
admin/frontend/src/components/ui/: select.tsx  sonner.tsx
admin/frontend/src/pages/: RunDetail.tsx  RunsList.tsx
examples/: activity_timeout.py  cancel_cascade.py  checkout.py  child_workflow.py  continue_as_new.py  crash_recovery.py  cron_schedule.py  durable_timer.py  heartbeat.py  idempotent_activity.py  list_runs.py  manual_approval.py  observability.py  otel_tracing.py  parallel_fanout.py  patched_versioning.py  payload_codec.py  postgres_dramatiq.py  queries.py  scanner.py  search_attributes.py  select.py  signal_with_start.py  updates.py  wait_timeout.py
src/duratiq/: __init__.py  activity_runtime.py  codec.py  context.py  cron.py  decorators.py  engine.py  events.py  exceptions.py  models.py  otel.py  registry.py  scanner.py  store.py
src/duratiq/drivers/: __init__.py  dramatiq.py  local.py
src/duratiq/migrations/: env.py
src/duratiq/migrations/versions/: 0001_initial_schema.py  0002_activity_timeout.py  0003_workflow_updates.py  0004_activity_heartbeat.py  0005_search_attributes.py  0006_workflow_timeouts.py  0007_activity_schedule_timeouts.py  0008_schedule_overlap.py  0009_memo.py  0010_workflow_id.py
tests/: test_activity_schedule_timeouts.py  test_activity_timeouts.py  test_cancel_cascade.py  test_cancellation_scope.py  test_child_workflows.py  test_continue_as_new.py  test_control.py  test_cron.py  test_ctx_now_info.py  test_dramatiq.py  test_dynamic_handlers.py  test_engine.py  test_gather.py  test_hardening.py  test_heartbeat.py  test_idempotent_activities.py  test_list_runs.py  test_local_activities.py  test_migrations.py  test_observability.py  test_otel.py  test_patched.py  test_payload_codec.py  test_queries.py  test_recover_orphaned_activities.py  test_recovery.py  test_retries.py  test_scanner.py  test_schedule_overlap.py  test_schedules.py  test_search_attributes.py  test_select.py  test_select_child.py  test_side_effect.py  test_signal_with_start.py  test_signals.py  test_terminate.py  test_timers.py  test_updates.py  test_wait_timeout.py  (+1 more)
