[project]
name = "duratiq"
version = "0.0.1"
description = "Durable workflows for Dramatiq — Temporal-style durable execution on your existing Dramatiq + Postgres stack."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dramatiq = ["dramatiq>=1.16"]
redis = ["dramatiq>=1.16", "redis>=5"]
postgres = ["psycopg[binary]>=3.1"]
# Everything the runnable examples/ need (postgres_dramatiq.py: Postgres + Redis broker).
examples = ["dramatiq>=1.16", "redis>=5", "psycopg[binary]>=3.1"]
dev = ["pytest>=8", "dramatiq>=1.16"]

[project.scripts]
# Periodic timer / schedule / recovery scanner. Point it at a 'module:callable'
# that returns a configured Engine, e.g. `duratiq-scanner myapp.workers:make_engine`.
duratiq-scanner = "duratiq.scanner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duratiq"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
