[project]
name = "duratiq"
version = "0.2.0"
description = "Durable workflows for Dramatiq — Temporal-style durable execution on your existing Dramatiq + Postgres stack."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Ivan Neto", email = "ivan.cr.neto@gmail.com" }]
keywords = [
    "dramatiq",
    "durable-execution",
    "workflow",
    "workflows",
    "orchestration",
    "temporal",
    "saga",
    "postgres",
    "sqlalchemy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy>=2.0",
]

[project.urls]
Homepage = "https://github.com/ivancrneto/duratiq"
Repository = "https://github.com/ivancrneto/duratiq"
Issues = "https://github.com/ivancrneto/duratiq/issues"
Changelog = "https://github.com/ivancrneto/duratiq/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dramatiq = ["dramatiq>=1.16"]
redis = ["dramatiq>=1.16", "redis>=5"]
postgres = ["psycopg[binary]>=3.1"]
migrations = ["alembic>=1.13"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
# Everything the runnable examples/ need (postgres_dramatiq.py: Postgres + Redis broker).
examples = ["dramatiq>=1.16", "redis>=5", "psycopg[binary]>=3.1"]
dev = ["pytest>=8", "pytest-cov>=5", "dramatiq>=1.16", "alembic>=1.13", "opentelemetry-sdk>=1.20"]

[project.scripts]
# Periodic timer / schedule / recovery scanner. Point it at a 'module:callable'
# that returns a configured Engine, e.g. `duratiq-scanner myapp.workers:make_engine`.
duratiq-scanner = "duratiq.scanner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duratiq"]
# Ship non-.py package data: the Alembic script template and the PEP 561 typing marker.
artifacts = [
    "src/duratiq/migrations/script.py.mako",
    "src/duratiq/py.typed",
]

# Scope the sdist explicitly so it's deterministic and minimal — never sweeping in
# local working-tree state (node_modules, .claude, build artifacts) that the default
# whole-directory sdist would otherwise include. `only-include` restricts the walk to
# exactly these paths (pyproject.toml is always included).
[tool.hatch.build.targets.sdist]
only-include = [
    "src/duratiq",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "alembic.ini",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["duratiq"]
branch = true

[tool.coverage.report]
# Regression gate. With branch coverage the suite sits at ~92%; 90% leaves headroom
# for the scanner's run-forever loop / CLI entry point, which aren't unit-tested.
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 120
