[project]
name = "duratiq-admin"
version = "0.0.1"
description = "Read-only web admin (FastAPI + SQLAlchemy) for duratiq workflow runs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duratiq",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

# Reuse the duratiq package (models + SqlStore) from the parent project, editable.
[tool.uv.sources]
duratiq = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
